--- a/nabcomm.html
+++ b/nabcomm.html
@@ -35,7 +35,7 @@
           <span class="icon-bar"></span>
           <span class="icon-bar"></span>
         </button>
-        <a class="navbar-brand" href="#">Nabcomm</a>
+        <a class="navbar-brand" href="#" style="padding-right: 100px;"><img src="img/logo1.png" style="max-width:200px;padding: 0px;" alt="Responsive image"></a>
       </div>
       <div class="navbar-collapse collapse" id="navbar-collapsible">
         <ul class="nav navbar-nav navbar-left">
